--- a/Chatter/app/src/main/res/values/strings.xml
+++ b/Chatter/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Chatter</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="profile_me">My Profile Pic</string>
+    <string name="profile_other">Other profile pic</string>
 </resources>
